obj/rp.h


#define RP_OK     0
typedef enum {
    RP_LED0,       
    RP_LED1,       
    RP_LED2,       
    RP_LED3,       
    RP_LED4,       
    RP_LED5,       
    RP_LED6,       
    RP_LED7,       
    RP_DIO0_P,     
    RP_DIO1_P,     
    RP_DIO2_P,     
    RP_DIO3_P,     
    RP_DIO4_P,     
    RP_DIO5_P,     
    RP_DIO6_P,     
    RP_DIO7_P,	   
    RP_DIO0_N,     
    RP_DIO1_N,     
    RP_DIO2_N,     
    RP_DIO3_N,     
    RP_DIO4_N,     
    RP_DIO5_N,     
    RP_DIO6_N,     
    RP_DIO7_N      
} rp_dpin_t;
typedef enum {
    RP_LOW, 
    RP_HIGH 
} rp_pinState_t;
typedef enum {
    RP_IN, 
    RP_OUT 
} rp_pinDirection_t;
typedef enum {
    RP_AOUT0,      
    RP_AOUT1,      
    RP_AOUT2,      
    RP_AOUT3,      
    RP_AIN0,       
    RP_AIN1,       
    RP_AIN2,       
    RP_AIN3        
} rp_apin_t;
typedef enum {
    RP_CH_1,    
    RP_CH_2     
} rp_channel_t;
typedef struct {
    uint32_t fe_ch1_fs_g_hi;    
    uint32_t fe_ch2_fs_g_hi;    
    uint32_t fe_ch1_fs_g_lo;    
    uint32_t fe_ch2_fs_g_lo;    
    int32_t  fe_ch1_lo_offs;    
    int32_t  fe_ch2_lo_offs;    
    uint32_t be_ch1_fs;         
    uint32_t be_ch2_fs;         
    int32_t  be_ch1_dc_offs;    
    int32_t  be_ch2_dc_offs;    
	uint32_t magic;			    
    int32_t  fe_ch1_hi_offs;    
    int32_t  fe_ch2_hi_offs;    
    uint32_t low_filter_aa_ch1;  
    uint32_t low_filter_bb_ch1;  
    uint32_t low_filter_pp_ch1;  
    uint32_t low_filter_kk_ch1;  
    uint32_t low_filter_aa_ch2;  
    uint32_t low_filter_bb_ch2;  
    uint32_t low_filter_pp_ch2;  
    uint32_t low_filter_kk_ch2;  
    uint32_t  hi_filter_aa_ch1;  
    uint32_t  hi_filter_bb_ch1;  
    uint32_t  hi_filter_pp_ch1;  
    uint32_t  hi_filter_kk_ch1;  
    uint32_t  hi_filter_aa_ch2;  
    uint32_t  hi_filter_bb_ch2;  
    uint32_t  hi_filter_pp_ch2;  
    uint32_t  hi_filter_kk_ch2;  
} rp_calib_params_t;
rp_calib_params_t rp_GetCalibrationSettings();
int rp_CalibrateFrontEndOffset(rp_channel_t channel, rp_pinState_t gain, rp_calib_params_t* out_params) ;
int rp_CalibrateFrontEndScaleLV(rp_channel_t channel, float referentialVoltage, rp_calib_params_t* out_params);
int rp_CalibrateFrontEndScaleHV(rp_channel_t channel, float referentialVoltage, rp_calib_params_t* out_params);
int rp_CalibrateBackEndOffset(rp_channel_t channel);
int rp_CalibrateBackEndScale(rp_channel_t channel);
int rp_CalibrateBackEnd(rp_channel_t channel, rp_calib_params_t* out_params);
int rp_CalibrationReset();
int rp_CalibrationFactoryReset();
int rp_CalibrationSetCachedParams();
int rp_CalibrationWriteParams(rp_calib_params_t calib_params);
int rp_CalibrationSetParams(rp_calib_params_t calib_params);
int rp_IdGetID(uint32_t *id);
int rp_IdGetDNA(uint64_t *dna);
int rp_LEDSetState(uint32_t state);
int rp_LEDGetState(uint32_t *state);
int rp_GPIOnSetDirection(uint32_t direction);
int rp_GPIOnGetDirection(uint32_t *direction);
int rp_GPIOnSetState(uint32_t state);
int rp_GPIOnGetState(uint32_t *state);
int rp_GPIOpSetDirection(uint32_t direction);
int rp_GPIOpGetDirection(uint32_t *direction);
int rp_GPIOpSetState(uint32_t state);
int rp_GPIOpGetState(uint32_t *state);
int rp_DpinReset();
int rp_DpinSetState(rp_dpin_t pin, rp_pinState_t state);
int rp_DpinGetState(rp_dpin_t pin, rp_pinState_t* state);
int rp_DpinSetDirection(rp_dpin_t pin, rp_pinDirection_t direction);
int rp_DpinGetDirection(rp_dpin_t pin, rp_pinDirection_t* direction);
int rp_ApinReset();
int rp_ApinGetValue(rp_apin_t pin, float* value);
int rp_ApinGetValueRaw(rp_apin_t pin, uint32_t* value);
int rp_ApinSetValue(rp_apin_t pin, float value);
int rp_ApinSetValueRaw(rp_apin_t pin, uint32_t value);
int rp_ApinGetRange(rp_apin_t pin, float* min_val,  float* max_val);
int rp_AIpinGetValue(int unsigned pin, float* value);