librp-sys/src/bindings.rs

extern "C" {
    #[doc = " Calibrates input channel offset. This input channel must be grounded to\n calibrate properly. Calibration data is written to EPROM and repopulated so\n that rp_GetCalibrationSettings works properly.\n @param channel Channel witch is going to be calibrated\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrateFrontEndOffset(
        channel: rp_channel_t,
        gain: rp_pinState_t,
        out_params: *mut rp_calib_params_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Calibrates input channel low voltage scale. Jumpers must be set to LV.\n This input channel must be connected to stable positive source.\n Calibration data is written to EPROM and repopulated so that\n rp_GetCalibrationSettings works properly.\n @param channel Channel witch is going to be calibrated\n @param referentialVoltage Voltage of the source.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrateFrontEndScaleLV(
        channel: rp_channel_t,
        referentialVoltage: f32,
        out_params: *mut rp_calib_params_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Calibrates input channel high voltage scale. Jumpers must be set to HV.\n This input channel must be connected to stable positive source.\n Calibration data is written to EPROM and repopulated so that\n rp_GetCalibrationSettings works properly.\n @param channel Channel witch is going to be calibrated\n @param referentialVoltage Voltage of the source.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrateFrontEndScaleHV(
        channel: rp_channel_t,
        referentialVoltage: f32,
        out_params: *mut rp_calib_params_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Calibrates output channel offset.\n This input channel must be connected to calibrated input channel with came\n number (CH1 to CH1 and CH2 to CH2). Calibration data is written to EPROM and\n repopulated so that rp_GetCalibrationSettings works properly.\n @param channel Channel witch is going to be calibrated\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrateBackEndOffset(channel: rp_channel_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Calibrates output channel voltage scale.\n This input channel must be connected to calibrated input channel with came\n number (CH1 to CH1 and CH2 to CH2). Calibration data is written to EPROM and\n repopulated so that rp_GetCalibrationSettings works properly.\n @param channel Channel witch is going to be calibrated\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrateBackEndScale(channel: rp_channel_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Calibrates output channel.\n This input channel must be connected to calibrated input channel with came\n number (CH1 to CH1 and CH2 to CH2). Calibration data is written to EPROM and\n repopulated so that rp_GetCalibrationSettings works properly.\n @param channel Channel witch is going to be calibrated\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrateBackEnd(
        channel: rp_channel_t,
        out_params: *mut rp_calib_params_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set default calibration values.\n Calibration data is written to EPROM and repopulated so that\n rp_GetCalibrationSettings works properly.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrationReset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Copy factory calibration values into user eeprom.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrationFactoryReset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set saved calibration values in case of roll-back calibration.\n Calibration data is written to EPROM and repopulated so that\n rp_GetCalibrationSettings works properly.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrationSetCachedParams() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Write calibration values.\n Calibration data is written to EPROM and repopulated so that\n rp_GetCalibrationSettings works properly.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrationWriteParams(calib_params: rp_calib_params_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set calibration values in memory.\n Calibration values are written to temporary memory, but not permanently.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_CalibrationSetParams(calib_params: rp_calib_params_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets FPGA Synthesized ID"]
    pub fn rp_IdGetID(id: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets FPGA Unique DNA"]
    pub fn rp_IdGetDNA(dna: *mut u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " LED methods"]
    pub fn rp_LEDSetState(state: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_LEDGetState(state: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " GPIO methods"]
    pub fn rp_GPIOnSetDirection(direction: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_GPIOnGetDirection(direction: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_GPIOnSetState(state: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_GPIOnGetState(state: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_GPIOpSetDirection(direction: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_GPIOpGetDirection(direction: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_GPIOpSetState(state: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_GPIOpGetState(state: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets digital pins to default values. Pins DIO1_P - DIO7_P, RP_DIO0_N -\n RP_DIO7_N are set al OUTPUT and to LOW. LEDs are set to LOW/OFF"]
    pub fn rp_DpinReset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets digital input output pin state.\n @param pin    Digital input output pin.\n @param state  High/Low state that will be set at the given pin.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_DpinSetState(pin: rp_dpin_t, state: rp_pinState_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets digital input output pin state.\n @param pin    Digital input output pin.\n @param state  High/Low state that is set at the given pin.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_DpinGetState(pin: rp_dpin_t, state: *mut rp_pinState_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets digital input output pin direction. LED pins are already automatically\n set to the output direction, and they cannot be set to the input direction.\n DIOx_P and DIOx_N are must set either output or input direction before they\n can be used. When set to input direction, it is not allowed to write into\n these pins.\n @param pin        Digital input output pin.\n @param direction  In/Out direction that will be set at the given pin.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_DpinSetDirection(
        pin: rp_dpin_t,
        direction: rp_pinDirection_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets digital input output pin direction.\n @param pin        Digital input output pin.\n @param direction  In/Out direction that is set at the given pin.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_DpinGetDirection(
        pin: rp_dpin_t,
        direction: *mut rp_pinDirection_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets analog outputs to default values (0V)."]
    pub fn rp_ApinReset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets value from analog pin in volts.\n @param pin    Analog pin.\n @param value  Value on analog pin in volts\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_ApinGetValue(pin: rp_apin_t, value: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets raw value from analog pin.\n @param pin    Analog pin.\n @param value  Raw value on analog pin\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_ApinGetValueRaw(pin: rp_apin_t, value: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets value in volts on analog output pin.\n @param pin    Analog output pin.\n @param value  Value in volts to be set on given output pin.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_ApinSetValue(pin: rp_apin_t, value: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets raw value on analog output pin.\n @param pin    Analog output pin.\n @param value  Raw value to be set on given output pin.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_ApinSetValueRaw(pin: rp_apin_t, value: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets range in volts on specific pin.\n @param pin      Analog input output pin.\n @param min_val  Minimum value in volts on given pin.\n @param max_val  Maximum value in volts on given pin.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_ApinGetRange(
        pin: rp_apin_t,
        min_val: *mut f32,
        max_val: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets value from analog pin in volts.\n @param pin    pin index\n @param value  voltage\n @return       RP_OK - successful, RP_E* - failure"]
    pub fn rp_AIpinGetValue(pin: ::std::os::raw::c_uint, value: *mut f32) -> ::std::os::raw::c_int;
}
